---
version: 0.0.198
date:    Fri Jul 27 11:00:45 PDT 2018
changes:
- Dist::Zilla::Plugin::TestML1Includer
- Add 5.28 to travis perl versions
---
version: 0.0.197
date:    Fri Jun 22 21:15:15 MDT 2018
changes:
- Add 5.26 to travis perl versions
---
version: 0.0.196
date:    Sun Feb 12 13:26:51 PST 2017
changes:
- Release after pause-cleanup screwed up
---
version: 0.0.195
date:    Wed Jan  4 21:34:29 CET 2017
changes:
- Exclude 5.8 5.10 and 5.12 in travis template
---
version: 0.0.194
date:    Fri Dec 23 17:49:01 CET 2016
changes:
- Fixed typo in About template
---
version: 0.0.193
date:    Tue Mar 29 14:18:40 PDT 2016
changes:
- Make version updating mst++ approved
---
version: 0.0.192
date:    Sat Apr 18 13:50:29 CEST 2015
changes:
- Rewrite `#!/usr/bin/env perl` in `zild cpan`
---
version: 0.0.191
date:    Thu Apr  2 12:26:25 PDT 2015
changes:
- make clean no longer removes Makefile
---
version: 0.0.190
date:    Thu Apr  2 12:22:16 PDT 2015
changes:
- Add JSON dependency
---
version: 0.0.189
date:    Sat Jan  3 15:43:29 PST 2015
changes:
- remove .inline/ for `make clean`
---
version: 0.0.188
date:    Fri Jan  2 12:17:42 PST 2015
changes:
- Get rid of DZ PluginBundles
- Use DZ Plugins directly
- Eliminate unused plugins
---
version: 0.0.187
date:    Thu Jan  1 19:02:33 PST 2015
changes:
- Update prereq versions
---
version: 0.0.186
date:    Thu Jan  1 00:00:27 PST 2015
changes:
- Add copright year check
- Happy New Year 2015
---
version: 0.0.185
date:    Wed Dec 31 21:24:14 PST 2014
changes:
- Work with new `swim` commandline args
---
version: 0.0.184
date:    Wed Dec 31 15:52:34 PST 2014
changes:
- Convert doc to swim-plugin-cpan
---
version: 0.0.183
date:    Wed Dec 31 15:08:14 PST 2014
changes:
- Fix doc references to `make`, to `zild`.
---
version: 0.0.182
date:    Wed Dec 31 14:28:35 PST 2014
changes:
- Pass --meta=Meta to swim
- Clean up Makefile a bit
---
version: 0.0.181
date:    Mon Dec 29 17:11:39 PST 2014
changes:
- Add AltInstall support
---