@@ -5,16 +5,13 @@
 language: perl
 
 perl:
-- '5.28'
-- '5.26'
-- '5.24'
-- '5.22'
 - '5.20'
 - '5.18'
 - '5.16'
 - '5.14'
 - '5.12'
 - '5.10'
+# - '5.8'
 
 install:
 - cpanm --quiet --notest
