@@ -15,7 +15,7 @@ Zilla::Dist - Dist::Zilla Mixed Up
 
 =head1 Version
 
-This document describes L<Zilla::Dist> version B<0.0.197>.
+This document describes L<Zilla::Dist> version B<0.0.198>.
 
 =head1 Synopsis
 
