@@ -6,7 +6,7 @@ abstract: Abstract goes here
 homepage: http://example.com
 language: perl
 license: perl
-copyright: 2014. Your Name.
+copyright: 2018. Your Name.
 
 author:
   name: Your Name
